// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styling and specificity Themed on desktop all builds should match 1`] = `
Object {
  "altButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 128, 0)",
    "color" => "rgb(255, 255, 255)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "altContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "inlineThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(255, 165, 0)",
    "color" => "rgb(0, 0, 0)",
    "opacity" => "0.5",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "inlineThemeContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "nestedRootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "nestedRootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "responsiveThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(128, 0, 128)",
    "color" => "rgb(255, 192, 203)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "responsiveThemeContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "root": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
  },
  "rootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "rootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
}
`;

exports[`Styling and specificity Themed on mobile all builds should match 1`] = `
Object {
  "altButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 128, 0)",
    "color" => "rgb(255, 255, 255)",
  },
  "altContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
  },
  "inlineThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(255, 165, 0)",
    "color" => "rgb(0, 0, 0)",
    "opacity" => "0.5",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "inlineThemeContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
  },
  "nestedRootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "nestedRootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
  },
  "responsiveThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(255, 192, 203)",
    "color" => "rgb(128, 0, 128)",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "responsiveThemeContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
  },
  "root": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
  },
  "rootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
  },
  "rootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
  },
}
`;
